--- a/RulEng/RulEng.csproj
+++ b/RulEng/RulEng.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="GraphQL" Version="0.17.3" />
+    <PackageReference Include="Jint" Version="2.11.58" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Redux.NET" Version="2.0.0" />
     <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
