--- a/Concurri.Svr.TestHarness/Concurri.Svr.TestHarness.csproj
+++ b/Concurri.Svr.TestHarness/Concurri.Svr.TestHarness.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Jint" Version="2.11.58" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Redux.NET" Version="2.0.0" />
     <PackageReference Include="System.Reactive.Core" Version="3.1.1" />
